--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@react-three/drei": "^9.108.0",
     "@react-three/fiber": "^8.18.0",
     "@tanstack/react-query": "^5.83.0",
+    "@types/mathjs": "^9.4.1",
     "@types/three": "^0.165.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -51,6 +52,7 @@
     "gsap": "^3.14.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "mathjs": "^15.1.0",
     "next": "latest",
     "next-themes": "^0.3.0",
     "react": "^19.0.0",
